# rules_rollup

./: .bazelrc  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  internal_deps.bzl  pnpm-lock.yaml
.aspect/workflows/: config.yaml
.bcr/: config.yml  metadata.template.json  source.template.json
.github/workflows/: buildifier.yaml  ci-vanilla-bazel.yaml  ci-workflows.yaml  ci.bazelrc  ci.yaml  new_issue.yaml  release.yml  release_prep.sh  workspace_snippet.sh
docs/: BUILD.bazel  rollup.md
e2e/: BUILD.bazel  WORKSPACE  bundle_expected.js  main.js  package.json  pnpm-lock.yaml  rollup.config.js
e2e/lib/: lib.js  package.json
e2e/smoke/: .bazelrc  BUILD  MODULE.bazel  README.md  WORKSPACE.bazel  WORKSPACE.bzlmod  config.js  package.json  pnpm-lock.yaml
e2e/smoke_rjs3/: .bazelrc  MODULE.bazel  package.json  pnpm-lock.yaml
e2e/workspace/: BUILD  WORKSPACE  pnpm-lock.yaml
example/: BUILD.bazel  bundle_expected.js  main.js  package.json  pnpm-lock.yaml  rollup.config.js
example/lib/: BUILD.bazel  lib.js  package.json
rollup/: BUILD.bazel  configure.bzl  defs.bzl  dependencies.bzl  extensions.bzl  repositories.bzl  rollup_bundle.bzl
rollup/private/: BUILD.bazel  rollup.bzl  rollup_bundle.bzl  run_rollup.js  versions.bzl
rollup/private/v2.70.2/: defs.bzl  node_modules.bzl  package.json  pnpm-lock.yaml  repositories.bzl
rollup/private/v3.15.0/: package.json  pnpm-lock.yaml
rollup/private/versions/v2.70.2/: BUILD.bazel  node_modules.bzl  package.json  pnpm-lock.yaml  repositories.bzl
rollup/tests/: BUILD.bazel  rollup.config.js  versions_test.bzl
scripts/: mirror_release.sh
tools/: BUILD.bazel
