"aspect-build/rules_rollup"

module(
    name = "aspect_rules_rollup",
    version = "0.0.0",
    compatibility_level = 1,
)

# Lower-bound (minimum) versions of direct dependencies
bazel_dep(name = "bazel_skylib", version = "1.5.0")

# Needs 2.x for coreutils toolchain resolution
bazel_dep(name = "aspect_bazel_lib", version = "2.2.0")

# 1.19.0: Need attribute 'dev' in 'npm_package_store_internal' rule
# 1.29.2: Need Windows fix to disable fs patches
bazel_dep(name = "aspect_rules_js", version = "1.35.0")
bazel_dep(name = "rules_nodejs", version = "5.8.2")
bazel_dep(name = "platforms", version = "0.0.7")

rollup = use_extension("@aspect_rules_rollup//rollup:extensions.bzl", "rollup")
rollup.toolchain(
    name = "rollup",
    rollup_version = "v2.70.2",
)
use_repo(rollup, "rollup")

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
)

npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
)

use_repo(npm, "npm")

bazel_dep(name = "buildifier_prebuilt", version = "6.0.0.1", dev_dependency = True)
bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.44.1", repo_name = "io_bazel_rules_go", dev_dependency = True)
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.5.0", dev_dependency = True)
