load("@aspect_rules_rollup//rollup:rollup_bundle.bzl", "rollup_bundle")
load("@aspect_rules_js//js:defs.bzl", "link_js_package")
load("@npm//:defs.bzl", "link_js_packages")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

link_js_packages()

link_js_package(
    name = "link_lib",
    src = "//example/lib",
    root_package = "example",
)

rollup_bundle(
    name = "bundle",
    config_file = ":rollup.config.js",
    entry_point = "main.js",
    sourcemap = "false",
    deps = [
        ":link_lib",
        "@npm//example/@rollup/plugin-node-resolve",
    ],
)

write_source_files(
    name = "bundle_diff",
    files = {"bundle_expected.js": "bundle.js"},
)
