load("@aspect_rules_rollup//rollup:rollup_bundle.bzl", "rollup_bundle")
load("@aspect_rules_js//npm:defs.bzl", "link_npm_package")
load("@npm//:defs.bzl", "link_all_npm_packages")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

link_all_npm_packages(name = "node_modules")

link_npm_package(
    name = "node_modules/@rollup_example/lib",
    src = "//example/lib",
    root_package = "example",
)

rollup_bundle(
    name = "bundle",
    config_file = ":rollup.config.js",
    entry_point = "main.js",
    sourcemap = "false",
    deps = [
        ":node_modules/@rollup_example/lib",
        "//example:node_modules/@rollup/plugin-node-resolve",
    ],
)

write_source_files(
    name = "bundle_diff",
    files = {"bundle_expected.js": "bundle.js"},
)
