load("@aspect_rules_rollup//rollup:defs.bzl", "rollup")
load("@aspect_rules_js//npm:defs.bzl", "npm_link_package")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")

npm_link_all_packages(name = "node_modules")

npm_link_package(
    name = "node_modules/@rollup_example/lib",
    src = "//example/lib",
    root_package = "example",
)

rollup(
    name = "bundle",
    config_file = ":rollup.config.js",
    entry_point = "main.js",
    node_modules = "//:node_modules",
    sourcemap = "false",
    deps = [
        ":node_modules/@rollup_example/lib",
        "//example:node_modules/@rollup/plugin-node-resolve",
    ],
)

write_source_files(
    name = "bundle_diff",
    files = {"bundle_expected.js": "bundle.js"},
)
