load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(["rollup_bundle.bzl"])

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//rollup/private:versions",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "rollup_bundle",
    srcs = ["rollup_bundle.bzl"],
    visibility = ["//visibility:public"],
    deps = ["//rollup/private:rollup_bundle"],
)
