"Bazel dependencies"
bazel_dep(name = "aspect_rules_rollup", dev_dependency = True, version = "0.0.0")
bazel_dep(name = "bazel_skylib", dev_dependency = True, version = "1.3.0")
bazel_dep(name = "aspect_rules_js", dev_dependency = True, version = "1.24.1")

local_path_override(
    module_name = "aspect_rules_rollup",
    path = "../..",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")

npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "@aspect_rules_rollup//:pnpm-lock.yaml",
)

use_repo(npm, "npm")
