"Bazel dependencies"

bazel_dep(name = "aspect_rules_rollup", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "2.2.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.3.0", dev_dependency = True)
bazel_dep(name = "aspect_rules_js", version = "1.35.0", dev_dependency = True)

local_path_override(
    module_name = "aspect_rules_rollup",
    path = "../..",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "@aspect_rules_rollup//:pnpm-lock.yaml",
)
use_repo(npm, "npm")
