load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "rollup_bundle",
    srcs = ["rollup_bundle.bzl"],
    visibility = ["//rollup:__subpackages__"],
    deps = ["@aspect_bazel_lib//lib:copy_to_bin"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//rollup:__subpackages__"],
)
