load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

# gazelle:exclude v*.*.*/*

exports_files(
    ["rollup.bzl"],
    visibility = ["//docs:__pkg__"],
)

bzl_library(
    name = "rollup",
    srcs = ["rollup.bzl"],
    visibility = ["//:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:copy_to_bin",
        "@aspect_rules_js//js:libs",
        "@aspect_rules_js//js:providers",
    ],
)
