load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@aspect_rules_rollup//rollup:defs.bzl", "rollup_bundle")

write_file(
    name = "gen",
    out = "gen.js",
    content = ["console.log('foo')"],
)

rollup_bundle(
    name = "bundle",
    config_file = "rollup.config.js",
    entry_points = {
        "gen.js": "index",
    },
    deps = ["gen"],
)
