load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@aspect_rules_rollup//rollup:defs.bzl", "rollup")
load("@aspect_rules_js//js:defs.bzl", "js_library")

write_file(
    name = "gen",
    out = "gen.js",
    content = ["console.log('foo')"],
)

js_library(
    name = "lib",
    srcs = ["gen"],
)

rollup(
    name = "bundle",
    entry_points = {
        "gen.js": "index",
    },
    node_modules = "//:node_modules",
    deps = [":lib"],
)
